# multimodal--meme-detector

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  test.yml
core/: __init__.py  analyze.py  data_utils.py  dataset.py  demo.py  evaluate.py  explain.py  export.py  models.py  train.py  validate.py
docs/: API.md  ARCHITECTURE.md  DATASETS.md  IMPLEMENTATION.md  MODEL_CARD.md  QUICKSTART.md  REPORT.md
results/: results_summary.json
scripts/: benchmark.py  evaluate_all.py  generate_all_results.py  predict_cli.py  prepare_multioff.py  train_all.py
tests/: conftest.py  test_api.py  test_dataset.py  test_models.py  test_training.py
web/: ui_template.html
web/api/: main.py  paper_ui.html
web/ui/: README.md  index.html  package-lock.json
web/ui/public/: manifest.json
web/ui/src/: App.jsx  index.css
